# image-geotagger

./: README.md  geotagger.py  pyproject.toml
geotagger/: __init__.py  geotagger.py  utils.py
